# HAL

./: Cargo.toml  README.md  blink.rs  output.elf  output.hex  transfert.bat  workspace.xml
src/: main.rs  mainv1.rs  panic.rs  spi.rs
src/gpio/: digital_pin.rs  mod.rs  pin_mode.rs  port.rs
src/i2c/: atmega328p.rs  cortex_m7.rs  mod.rs
src/spi/: atmega328p.rs  cortex_m7.rs  mod.rs
src/usart/: atmega328p.rs  cortex_m7.rs  mod.rs
